--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -50,8 +50,18 @@ android {
         versionName flutterVersionName
     }
 
+
+    signingConfigs {
+        debug {
+            keyAlias 'android'
+            keyPassword 'mubashir'
+            storeFile file('key.jks')
+            storePassword 'mubashir'
+        }
+    }
+
     buildTypes {
-        release {
+        debug {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
             signingConfig signingConfigs.debug
