--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,17 +39,30 @@ dependencies:
   circular_countdown_timer: ^0.2.0
   stop_watch_timer: ^1.3.1
   fitted_text_field_container: ^2.0.0
+  flutter_otp_text_field: ^1.0.0
+  timeago: ^3.2.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_screenutil: ^5.1.0
-  google_fonts: ^2.2.0
+  google_fonts: ^2.1.1
   hexcolor: ^2.0.5
   get: ^4.6.1
   introduction_screen: ^2.1.0
   font_awesome_flutter: ^9.2.0
   flutter_signin_button: ^2.0.0
+  email_validator: ^2.0.1
+  http:
+  dio:
+  google_sign_in: ^5.2.3
+  shared_preferences: ^2.0.12 
+  url_launcher: ^6.0.20
+  file_picker: ^4.3.3
+
+
+
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -76,7 +89,8 @@ flutter:
     - assets/985_google_g_icon.jpg
     - assets/profile.jpg
     - assets/dp.jpg
-
+    - assets/undraw_Message_sent_re_q2kl-removebg-preview.png
+    - assets/images.jpeg
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
